# nodemcujs-firmware

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/jerry-console/: CMakeLists.txt  console.c
components/jerry-console/include/: console.h
components/jerry-core/: CMakeLists.txt  component.mk  config.h
components/jerry-core/ecma/builtin-objects/: ecma-builtin-map.c
components/jerry-ext/: CMakeLists.txt
components/jerry-libm/: CMakeLists.txt
components/jerry-module/: jerry-module.c
components/jerry-module/include/: jerry-module.h
components/jerry-port-default/: CMakeLists.txt  default-io.c
components/jerry-timer/: CMakeLists.txt  timer.c
components/jerry-timer/include/: timer.h
components/list/: CMakeLists.txt  Readme.md  benchmark.c  component.mk  test.c
components/list/src/: clist.c  clist.h  list_iterator.c  list_node.c
components/nodemcujs_buildin/: nodemcujs_buildin.c
components/nodemcujs_buildin/include/: nodemcujs_module_inl.h
components/nodemcujs_module_gpio/: nodemcujs_module_gpio.c
components/nodemcujs_module_gpio/include/: nodemcujs_module_gpio.h
examples/: st7735-spi.js
examples/http/: http_stream.js
examples/remote_control/: ws2812b.js
examples/sigmadelta/: led.js
examples/spi/: st7735-spi.js  st7789-spi.js
examples/wifi/: connect_to_ap.js  scan_ap.js
main/: CMakeLists.txt  Makefile  nodemcujs_main.c
main/include/: nodemcu_config.h  nodemcujs.h  nodemcujs_config.h
main/src/: nodemcujs.c  nodemcujs_binding.c  nodemcujs_binding.h  nodemcujs_def.h  nodemcujs_js.c  nodemcujs_js.h  nodemcujs_magic_strings.h  nodemcujs_module.c  nodemcujs_module.h  nodemcujs_module_inl.h  nodemcujs_string.c  nodemcujs_string.h  nodemcujs_string_ext.inl.h  nodemcujs_utils.c  nodemcujs_utils.h
main/src/js/: console.js  events.js  module.js  nodemcujs.js  spi.js  util.js  wifi.js
main/src/modules/: nodemcujs_module_console.c  nodemcujs_module_esp_error.c  nodemcujs_module_gpio.c  nodemcujs_module_http_client.c  nodemcujs_module_nvs_flash.c  nodemcujs_module_process.c  nodemcujs_module_rmt.c  nodemcujs_module_sigmadelta.c  nodemcujs_module_spi_master.c  nodemcujs_module_timers.c  nodemcujs_module_wifi.c
main/tools/: js2c.py
scripts/: install-idf-v3.2.sh  install-xtensa.sh
spiffs/: a.js  b.js  index.js
